[package]
name = "eve-settings-viewer"
version = "0.1.0"
edition = "2021"
description = "Eve Online settings file viewer with character name lookup"

[dependencies]
eframe = "0.31"
egui = "0.31"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
regex = "1.11"
